fix chrome bug  with overflow hidden and transform not clickable  and scrolable backside

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,7 +242,7 @@ input[type='range']::-moz-range-thumb {
 
 ///// ROTATE PLAYER /////
 .rotate{
-  transform: rotateY(-180.5deg);
+  transform: rotateY(-180deg) translateZ(1px); //workaround for bug with transform and overflow: hidden in Chrome
 }
 .flip-player {
 
@@ -263,7 +263,7 @@ input[type='range']::-moz-range-thumb {
     position: relative;
     width: 100%;
     height: 100%;
-    transform: rotateY(180.5deg);
+    transform: rotateY(180deg);
     backface-visibility: hidden;
     background-color: #f3f4f8;
     box-shadow: 0px 6rem 3rem -3rem rgba(0, 0, 0, 0.4),
